deploy/canary/services.yaml
apiVersion: v1
kind: Service
metadata:
    name: messenger-stable
    namespace: default
spec:
    ports:
        - port: 80
          targetPort: 8080
          name: http
    selector:
        app: messenger
        version: stable
---
apiVersion: v1
kind: Service
metadata:
    name: messenger-canary
    namespace: default
spec:
    ports:
        - port: 80
          targetPort: 8080
          name: http
    selector:
        app: messenger
        version: canary
