deploy/canary/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: messenger
    namespace: default
spec:
    host: messenger
    subsets:
        - name: stable
          labels:
              version: stable
        - name: canary
          labels:
              version: canary
